--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="footer-left">
-            &copy; MyBix Theme. All rights reserved
+            &copy; ©2018 Preston Mack. All rights reserved
 
           </div>
         </div>
